--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -61,6 +61,10 @@
     }
   },
   "footer":{
+    "personal-info": {
+      "name": "Nico Iseli",
+      "job": "UX Designer @finpension"
+    },
     "pages": {
       "title": "Pages",
       "home": "Home",
@@ -71,19 +75,19 @@
     },
     "profiles": {    
       "title": "Profiles",
-      "linkedin": "LinkedIn",
-      "unsplash": "Unsplash",
       "dribbble": "Dribbble",
+      "github": "GitHub",
+      "linkedin": "LinkedIn",
       "pinterest": "Pinterest",
-      "github": "GitHub"
+      "unsplash": "Unsplash"
     },
     "resources":{
-      "title": "Project Resources",
-      "vercel": "Vercel",
-      "vite": "Vite",
-      "i18next": "i18next",
+      "title": "Resources",
+      "github": "GitHub",
       "gsap": "GSAP",
-      "github": "GitHub"
+      "i18next": "i18next",
+      "svelte": "Svelte",
+      "vercel": "Vercel"
     },
     "copyright": "Copyright © 2025 Nico Iseli. All rights reserved."
   },
