--- a/src/lib/locales/de.json
+++ b/src/lib/locales/de.json
@@ -6,6 +6,7 @@
 			"menu-3": "Mindspace",
 			"menu-4": "Creative-Lab"
 		},
+		"contact": "Sag Hallo",
 		"search": {
 			"placeholder": "Suchen",
 			"quickstart": "Schnelleinstieg",
